--- a/Jupyter_Miniproject_1.ipynb
+++ b/Jupyter_Miniproject_1.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "\n",
     "# Useful imports to define the direct download function below\n",
-    "import requestsGQJ!v3?u9f&\n",
+    "import requests\n",
     "import urllib.request\n",
     "from tqdm import tqdm\n",
     "\n",
