--- a/Jupyter_Miniproject_1.ipynb
+++ b/Jupyter_Miniproject_1.ipynb
@@ -1235,9 +1235,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca371a1b-77c0-41df-a64d-56e0061d7710",
+   "metadata": {},
+   "source": [
+    "<h2>Smoothing</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "ef736e79-2f2a-493d-b24f-8bd54f9c60a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['fslmaths', '/home/jovyan/Data/dataset/ds000171/derivatives/preprocessed_data/sub-control01/func/sub-control01_task-music_bold_moco', '-s', '2.547987090198743', '/home/jovyan/Data/dataset/ds000171/derivatives/preprocessed_data/sub-control01/func/sub-control01_task-music_bold_moco_smoothed-6mm'], returncode=0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmd = 'fslmaths {} -s {} {}_smoothed-6mm'.format(outpath, 6/2.3548, outpath)\n",
+    "subprocess.run(['fslmaths',outpath, '-s', str(6/2.3548), '{}_smoothed-6mm'.format(outpath)])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3af1b33-8ec3-41b8-bc6b-0eb1e3f0b810",
+   "id": "40c1c06d-1574-4d07-a119-6a4d09950bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fsleyesDisplay.resetOverlays()\n",
+    "fsleyesDisplay.load(outpath + '_smoothed-6mm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd5e115-f32e-4d88-a66e-d1d3a9d1adfd",
    "metadata": {},
    "outputs": [],
    "source": []
