--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -11,7 +11,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(ipykernel_launcher.py:248683): Gtk-CRITICAL **: 15:50:24.767: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:248683): Gtk-CRITICAL **: 15:50:24.789: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n"
+     ]
+    }
+   ],
    "source": [
     "%gui wx\n",
     "import os\n",
@@ -63,7 +74,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from utilities import get_skull_stripped_anatomical, apply_python_mask_approach, launch_freeview, fsl_anat_wrapped, load_mot_params_fsl_6_dof, compute_FD_power, apply_transform, combine_all_transforms, normalize_fMRI,run_subprocess, merge_to_mni"
+    "from utilities import get_skull_stripped_anatomical, apply_python_mask_approach, launch_freeview, fsl_anat_wrapped, load_mot_params_fsl_6_dof, compute_FD_power, apply_transform, combine_all_transforms, normalize_fMRI,run_subprocess, merge_to_mni, smooth_volume"
    ]
   },
   {
@@ -95,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2980,17 +2991,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_std = op.join(preproc_root, 'sub-control01', 'func', 'std')\n",
+    "mkdir_no_exist(split_std)\n",
+    "# Notice that we are sorting the volumes here! This is important, to make sure we don't get them in random order :)\n",
+    "split_dir = op.join(preproc_root, 'sub-control01', 'func', 'splits')\n",
+    "split_vols = sorted([op.join(split_dir, f) for f in os.listdir(split_dir)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "import concurrent.futures\n",
     "from tqdm import tqdm\n",
-    "split_std = op.join(preproc_root, 'sub-control01', 'func', 'std')\n",
-    "mkdir_no_exist(split_std)\n",
-    "# Notice that we are sorting the volumes here! This is important, to make sure we don't get them in random order :)\n",
-    "split_dir = op.join(preproc_root, 'sub-control01', 'func', 'splits')\n",
-    "split_vols = sorted([op.join(split_dir, f) for f in os.listdir(split_dir)])\n",
     "\n",
     "# Initialize ThreadPoolExecutor and the progress bar\n",
     "with concurrent.futures.ThreadPoolExecutor(max_workers=4) as executor:\n",
@@ -3006,36 +3025,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting for batch 1/4\n",
-      "Starting for batch 2/4\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to interrupt the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'base (Python 3.11.9)' due to a timeout waiting for the ports to get used. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "split_std = op.join(preproc_root, 'sub-control01', 'func', 'std')\n",
-    "produced_vols = sorted([op.join(split_std, f) for f in os.listdir(split_std)])\n",
-    "merge_to_mni(preproc_root, produced_vols)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3044,40 +3033,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smooth_folder = op.join(preproc_root, 'sub-control01', 'func', 'smoothed')\n",
+    "mkdir_no_exist(smooth_folder)\n",
+    "files = sorted([f.replace(\".nii.gz\", \"\") for f in os.listdir(split_std)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import concurrent.futures\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "# Initialize ThreadPoolExecutor and the progress bar\n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=4) as executor:\n",
+    "    # Use tqdm to wrap the futures\n",
+    "    with tqdm(total=len(files)) as progress:\n",
+    "        # Launch subprocesses in parallel\n",
+    "        futures = [executor.submit(smooth_volume, op.join(split_std,f), op.join(smooth_folder,f)) for f in files]\n",
+    "\n",
+    "        # Process completed tasks\n",
+    "        for future in concurrent.futures.as_completed(futures):\n",
+    "            future.result()  # Get the result of the subprocess\n",
+    "            progress.update(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging volumes to fMRI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "produced_vols = sorted([op.join(smooth_folder, f) for f in os.listdir(smooth_folder)])\n",
+    "merged_volumes_path = op.join(preproc_root, 'sub-control01', 'func', 'sub-control01_task-music_concat_bold_moco_bbr_std_smoothed-6mm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['fslmaths', './data/ds000171/derivatives/preprocessed_data/sub-control01/func/sub-control01_task-music_concat_bold.nii.gz', '-s', '2.547987090198743', './data/ds000171/derivatives/preprocessed_data/sub-control01/func/sub-control01_task-music_concat_bold.nii.gz_smoothed-6mm'], returncode=0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting for batch 1/4\n",
+      "Starting for batch 2/4\n",
+      "Starting for batch 3/4\n",
+      "Starting for batch 4/4\n"
+     ]
     }
    ],
    "source": [
-    "merged_volumes_path = op.join(preproc_root, 'sub-control01', 'func', 'sub-control01_task-music_concat_bold_moco_bbr_std')\n",
+    "data_path = merge_to_mni(preproc_root, produced_vols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_vol = nib.load(produced_vols[0])\n",
+    "v_shape = first_vol.get_fdata().shape\n",
+    "large_array = np.memmap(data_path, dtype=np.float32, mode='r', shape=(v_shape[0],v_shape[1],v_shape[2], len(produced_vols)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done with header\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "cmd = 'fslmaths {} -s {} {}_smoothed-6mm'.format(merged_volumes_path, 6/2.3548, merged_volumes_path)\n",
-    "subprocess.run(['fslmaths',epi_target, '-s', str(6/2.3548), '{}_smoothed-6mm'.format(merged_volumes_path)])"
+    "header = first_vol.header.copy()  # Copy the header of the first volume (to get right resolution, affine, Q-form etc)\n",
+    "header['dim'][0] = 4  # Specifies that this is a 4D dataset\n",
+    "header['dim'][1:5] = large_array.shape  # Update dimensions (x, y, z, t)\n",
+    "header['pixdim'][4] = 3.0  # Set the TR in the 4th dimension. You can see the TR of the data by looking at your original EPI series with fslhd, remember ;)\n",
+    "print(\"Done with header\")\n",
+    "\n",
+    "# Step 3: Create the Nifti1 image and save it to disk\n",
+    "img = nib.Nifti1Image(large_array, first_vol.affine, first_vol.header)\n",
+    "img.to_filename(merged_volumes_path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Slice correction \n",
-    "\n",
-    "#### Application to real data\n",
-    "\n",
-    "We have shown you the basic principle, but the application to real data requires some specific informations.\n",
-    "You need the following ingredients:\n",
-    "- When was each slice acquired in the sequence: **(Slice timing)**\n",
-    "- Along which axis were the slices acquired: **Phase direction**\n",
-    "- How much time we take to acquire all slices: **TR**\n"
+    "# Slice correction "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./task-music_bold.json\", 'r') as file:\n",
+    "    data = json.load(file)"
    ]
   },
   {
@@ -3086,73 +3162,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = get_json_from_file(op.join(bids_root, 'sub-001', 'func', 'sub-001_task-sitrep_run-01_bold.json'))\n",
-    "data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This data is actually a dictionary. We can thus extract the slice timing as an array directly from it. For example, to extract TaskName, we would use:\n",
-    "```python\n",
-    "data['TaskName']\n",
-    "```\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slice_timing = data['SliceTiming'] # Replace with the appropriate key (have a look above!)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we might want to know where our slices are, ie along which axis, right? Typically it is along the z-direction, but we're better off if we check! Using FSLeyes, determine how many slices each axis has **for the functional data of interest**. You should thus open the relevant functional file in FSLeyes to answer this question.\n",
-    "\n",
-    "\n",
-    "<div class=\"warning\" style='background-color:#90EE90; color: #112A46; border-left: solid #805AD5 4px; border-radius: 4px; padding:0.7em;'>\n",
-    "<span>\n",
-    "<p style='margin-top:1em; text-align:center'><b>Using FSL command line</b></p>\n",
-    "<p style='text-indent: 10px;'>To figure out the dimensions of an MRI image, a faster option - if you have FSL installed directly - is to run the command line command:\n",
-    "    <blockquote>fslhd [your_volume]</blockquote>\n",
-    "This will give you all informations contained within the header of the NIfti file. For example, running the command for our volume will easily allow us to access the slice informations:\n",
-    "    <img src=\"imgs/fslhd_capture.png\"></p>\n",
-    "</span>\n",
-    "</div>\n",
-    "Let's compare now with the amount of slices we have in our acquisition. We can consider simply the number of timings for this"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fsleyesDisplay.resetOverlays()\n",
-    "fsleyesDisplay.load(op.join(bids_root, 'sub-001', 'func', 'sub-001_task-sitrep_run-01_bold.nii.gz'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "slice_timing = data['SliceTiming'] # Replace with the appropriate key (have a look above!)\n",
     "len(slice_timing)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Great, so we know which axis we want, we know the slice timings, but we still need to know the TR. This information is also in the JSON sidecar! Extract it now!"
+    "# Image shape (80, 80, 50, 105)\n",
+    "# Slice timing length 50\n",
+    "dimension = 3"
    ]
   },
   {
@@ -3166,15 +3188,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To now perform the correction, we need to apply FSL's slicetimer command. For this, we need to save the timings first to their own separate file! Instead of giving the slice timings, we will provide instead the slice **order** (ie which slice was done in which order) and let FSL figure out how to best correct based on this information.\n",
-    "\n",
-    "Let's do it."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3183,7 +3196,7 @@
     "slice_order = np.argsort(slice_timing) + 1\n",
     "\n",
     "# Write to a file the corresponding sorted timings :)\n",
-    "timing_path = op.join(preproc_root,  'sub-001', 'func', 'sub-001_task-sitrep_run-01_slice-timings.txt')\n",
+    "timing_path = op.join(preproc_root, 'sub-control01', 'func', 'sub-control01_task-music_slice-timings.txt')\n",
     "file = open(timing_path, mode='w')\n",
     "for t in slice_order:\n",
     "    file.write(str(t) + '\\n')\n",
@@ -3191,35 +3204,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally we can call slicetimer from a terminal!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_to_realign = op.join(bids_root, 'sub-001', 'func', 'sub-001_task-sitrep_run-01_bold')\n",
-    "output_target = op.join(preproc_root, 'sub-001', 'func', 'sub-001_task-sitrep_run-01_bold_slice-corr')\n",
+    "for run in range(1,4):\n",
+    "    file_to_realign = op.join(bids_root, 'sub-control01', 'func',  'sub-control01_task-music_run-{}_bold_norm'.format{run})\n",
+    "    output_target = op.join(preproc_root, 'sub-control01', 'func', 'sub-control01_task-music_run-{}_bold_norm_slice-corr'.format{run})\n",
     "\n",
-    "subprocess.run(['slicetimer', '-i', file_to_realign, '-o', output_target, '-r', str(tr), '-d', str(3), '--ocustom={}'.format(timing_path)])\n",
-    "#cmd = 'slicetimer -i ' + file_to_realign + ' -o ' + output_target + ' -r ' + str(tr) + ' -d 3 --ocustom=' + timing_path\n",
-    "#os.system(cmd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fsleyesDisplay.resetOverlays()\n",
-    "fsleyesDisplay.load(file_to_realign)\n",
-    "fsleyesDisplay.load(output_target)"
+    "    subprocess.run(['slicetimer', '-i', file_to_realign, '-o', output_target, '-r', str(tr), '-d', str(dimension), '--ocustom={}'.format(timing_path)])\n"
    ]
   }
  ],
