--- a/glm.ipynb
+++ b/glm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "CHwB-woT1qrg"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "Fv_OQEgQnZIr"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "WFu-VecQ1Z6K"
    },
@@ -42,9 +42,11 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "username = os.getlogin()\n",
-    "local = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
-    "os.environ[\"DIPY_HOME\"] = \"./data/\" if COLAB else local\n",
+    "if not COLAB:\n",
+    "  username = os.getlogin()\n",
+    "  os.environ[\"DIPY_HOME\"] = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
+    "else:\n",
+    "  os.environ[\"DIPY_HOME\"] = \"./data/\"\n",
     "import dipy\n",
     "import os.path as op\n",
     "import numpy as np\n",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "ThmvNT-S2cMI"
    },
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "V8T15DSj3Gqo"
    },
@@ -77,8 +79,11 @@
     "number = 1\n",
     "dataset_id = 'ds000171'\n",
     "subject_id = f'control0{number}'\n",
-    "local = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
-    "sample_path = \"/content/drive/MyDrive/NSSP/data/\" if COLAB else \"./data/\"\n",
+    "if not COLAB:\n",
+    "  username = os.getlogin()\n",
+    "  sample_path = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
+    "else:\n",
+    "  sample_path = \"/content/drive/MyDrive/NSSP/data/\"\n",
     "os.makedirs(sample_path, exist_ok=True)\n",
     "bids_root = op.join(sample_path, dataset_id)\n",
     "preproc_root = op.join(bids_root, 'derivatives', 'preprocessed_data')\n",
