--- a/ica.ipynb
+++ b/ica.ipynb
@@ -49,7 +49,6 @@
     "from nilearn.image import iter_img\n",
     "from nilearn.plotting import plot_stat_map, show\n",
     "from sklearn.decomposition import FastICA, PCA\n",
-    "username = os.getlogin()\n",
     "from nilearn import datasets\n",
     "from nilearn.input_data import NiftiMasker\n",
     "from scipy.stats import zscore\n",
@@ -67,8 +66,11 @@
    },
    "outputs": [],
    "source": [
-    "local = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
-    "data_path = \"/content/drive/MyDrive/NSSP/data/\" if COLAB else local\n",
+    "if not COLAB:\n",
+    "  username = os.getlogin()\n",
+    "  data_path = \"./data/\" if \"nicolas\" in username else \"/home/jovyan/Data\"\n",
+    "else:\n",
+    "  data_path = \"/content/drive/MyDrive/NSSP/data/\"\n",
     "dataset_id = \"ds000171\"\n",
     "subject_id = \"sub-control01\"\n",
     "fmri_path = op.join(data_path, dataset_id, \"derivatives\" , \"preprocessed_data\", subject_id, \"func\" ,f\"{subject_id}_task-music_concat_bold_moco_bbr_std_smoothed-6mm.nii.gz\")\n",
