--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -96,32 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.679: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.679: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.679: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.679: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.817: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.817: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.817: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
-      "\n",
-      "(ipykernel_launcher.py:340324): Gtk-WARNING **: 20:07:40.817: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_id = 'ds000171' \n",
     "subject_id = 'control01'    \n",
@@ -137,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,12 +235,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.070: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.070: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.070: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.070: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.169: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.169: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.169: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:30:42.170: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:08.104: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:08.104: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:08.104: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:08.104: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.163: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.183: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.433: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.454: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.622: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.642: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.812: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:09.832: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:09.902: Negative content width -1 (allocation 1, extents 1x1) while allocating gadget (node spinbutton, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:09.902: for_size smaller than min-size (1 < 32) while measuring gadget (node entry, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:09.902: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-WARNING **: 13:33:09.902: for_size smaller than min-size (1 < 16) while measuring gadget (node button, owner GtkSpinButton)\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:43.664: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:43.683: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:44.501: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:44.521: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n"
+     ]
+    }
+   ],
    "source": [
     "[os.remove(f) for f in glob.glob(op.join(preproc_root, 'sub-control01', 'anat', '*fast*'))]\n",
-    "fast(imgs=[betted_brain_path], out=segmentation_path, n_classes=3);"
+    "fast(imgs=[flirt_path], out=segmentation_path, n_classes=3);"
    ]
   },
   {
@@ -344,13 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if display:\n",
+    "if True:\n",
     "    fsleyesDisplay.resetOverlays()\n",
-    "    fsleyesDisplay.load(betted_brain_path)\n",
+    "    fsleyesDisplay.load(flirt_path)\n",
     "    # CSF\n",
     "    fsleyesDisplay.load(glob.glob(op.join(preproc_root, 'sub-control01', 'anat','*pve_0*'))[0])\n",
     "    # GM\n",
