--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,11 @@
       "\n",
       "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:44.501: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
       "\n",
-      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:44.521: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n"
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:33:44.521: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:48:43.868: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n",
+      "\n",
+      "(ipykernel_launcher.py:6754): Gtk-CRITICAL **: 13:48:43.887: gtk_combo_box_text_insert: assertion 'GTK_IS_COMBO_BOX_TEXT (combo_box)' failed\n"
      ]
     }
    ],
